Finito, funziona tutto.

--- a/Draft/Config.properties
+++ b/Draft/Config.properties
@@ -1,7 +1,7 @@
-righe = 10
-colonne = 10
-turni = 4
+righe = 5
+colonne = 5
+turni = 5
 animali_che_si_accoppiano = 3
-animali_che_si_clonano = 
+animali_che_si_clonano = 3
 
 
